libreoffice (1:6.4.0~rc1-3) UNRELEASED; urgency=medium

  readd test fixes which somewow got lost in preparation of -2:

  * debian/tests/control:
    - smoktest: add missing -nogui and add missing libreoffice-base-nogui
      to Depends:; but use calc and core since the test actually seems to want
      to use something from it 
    - junit: use the "GUI" packages

 -- Rene Engelhard <rene@debian.org>  Thu, 26 Dec 2019 10:29:15 +0100

libreoffice (1:6.4.0~rc1-2) unstable; urgency=medium

  * debian/rules, debian/control*in:
    - make -nogui variant less confusing and create them for all "UI"
      packages (also saves some space since some (not needed for nogui)
      will be gone from -nogui)
  * debian/rules, debian/libreoffice-calc-nogui.lintian-overrides:
    - remove lib*uilo.so and *.desktop from *-nogui
  * debian/tests/control:
    - fix typo
    - use the new -nogui packages created above in the smoketest test

 -- Rene Engelhard <rene@debian.org>  Sun, 22 Dec 2019 18:37:42 +0100

libreoffice (1:6.4.0~rc1-1) unstable; urgency=medium

  * LibreOffice 6.4.0 release candidate 1
  * upload to unstable

  * debian/patches/sc-opengl-optional.diff:  don't rely on
    isVCLOpenGLEnabled if HEAVE_FEATURE_UI isn't defined

  * debian/control.in, debian/rules: create a libreoffice-calc-nogui
    for use with libreoffice-core-nogui
  * debian/rules:
    - cleanup, introduce a BUILD_NOGUI_PACKAGES=y/n and only
      build -nogui on amd64/i386/arm64/s390x/ppc64el so save build cycles on
      the other architectures (more or less double build)
    - add explicit libgl-dev build-dep 

  * debian/control.firebird.in: allow libreoffice-core-nogui
  * debian/control.in:
    - allow libreoffice-core-nogui for libreoffice-dev
    - move python-access2base to "python" and libreoffice-sdbc-mysql to
      "database" like the other -sdbc-*
  * debian/tests/control:
    - improve test depends for nogui:
      + make odk-test-examples/test-extension-* depend on