@@ -1041,6 +1041,8 @@ Replaces: libreoffice-java-common
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
 Architecture: all
+Replaces: libreoffice-java-common (<< 1:6.4.0~beta1-1)
+Breaks: libreoffice-java-common (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- UNO interface library
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1052,6 +1054,8 @@ Replaces: libreoffice-officebean
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
 Architecture: all
+Replaces: libreoffice-officebean (<< 1:6.4.0~beta1-1)
+Breaks: libreoffice-officebean (<< 1:6.4.0~beta1-1)
 Description: A generic Java Bean wrapper for LibreOffice components
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -4434,6 +4438,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4445,6 +4451,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- base types and types access library for the Java Uno typesystem
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4457,6 +4465,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4468,6 +4478,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4785,7 +4797,8 @@ Section: misc
 Depends: ${misc:Depends}
 Architecture: all
 Build-Profiles: <!nocheck>
-Replaces: libreoffice-java-common
+Replaces: libreoffice-java-common (<< 1:6.4.0~beta1-2)
+Breaks: libreoffice-java-common (<< 1:6.4.0~beta1-2)
 Description: data files for LibreOffices "smoketest"
  Data files for the LibreOffice "smoketest".
 
