@@ -803,6 +803,8 @@ Replaces: libreoffice-java-common
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
 Architecture: all
+Replaces: libreoffice-java-common (<< 1:6.4.0~beta1-1)
+Breaks: libreoffice-java-common (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- UNO interface library
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -814,6 +816,8 @@ Replaces: libreoffice-officebean
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
 Architecture: all
+Replaces: libreoffice-officebean (<< 1:6.4.0~beta1-1)
+Breaks: libreoffice-officebean (<< 1:6.4.0~beta1-1)
 Description: A generic Java Bean wrapper for LibreOffice components
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
