@@ -11,7 +11,8 @@ Section: misc
 Depends: ${misc:Depends}
 Architecture: all
 Build-Profiles: <!nocheck>
-Replaces: libreoffice-java-common
+Replaces: libreoffice-java-common (<< 1:6.4.0~beta1-2)
+Breaks: libreoffice-java-common (<< 1:6.4.0~beta1-2)
 Description: data files for LibreOffices "smoketest"
  Data files for the LibreOffice "smoketest".
 
