@@ -133,6 +133,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -144,6 +146,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- base types and types access library for the Java Uno typesystem
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -156,6 +160,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -167,6 +173,8 @@ Replaces: ure
 Architecture: all
 Section: java
 Depends: ${java:Depednds}, ${misc:Depends}
+Replaces: ure (<< 1:6.4.0~beta1-1)
+Breaks: ure (<< 1:6.4.0~beta1-1)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
