@@ -7,6 +7,9 @@ libreoffice (1:6.4.0~rc1-3) UNRELEASED; urgency=medium
       to Depends:; but use calc and core since the test actually seems to want
       to use something from it 
     - junit: use the "GUI" packages
+  * debian/control*in:
+    - add more Breaks:/Replaces: for the new split-out Java packages (and
+      libreoffice-smoketest-data) (closes: #947446)
 
  -- Rene Engelhard <rene@debian.org>  Thu, 26 Dec 2019 10:29:15 +0100
 
